# ruvector

./: Cargo.toml  README.md
.github/workflows/: build-gnn.yml  build-native.yml  graph-ci.yml
crates/ruvector-attention-wasm/pkg/: package.json  ruvector_attention_wasm.d.ts  ruvector_attention_wasm.js  ruvector_attention_wasm_bg.wasm
crates/ruvector-cognitive-container/tests/: container_bench.rs
crates/ruvector-coherence/src/: spectral.rs
crates/ruvector-coherence/tests/: spectral_bench.rs
crates/ruvector-gnn-node/: package.json
crates/ruvector-gnn/src/: mmap.rs  training.rs
crates/ruvector-graph-transformer-wasm/pkg/: ruvector_graph_transformer_wasm_bg.wasm
crates/ruvector-nervous-system/: README.md
crates/ruvector-postgres/: Dockerfile
crates/ruvector-postgres/docker/: Dockerfile
crates/ruvector-temporal-tensor/src/: bitpack.rs  compressor.rs  delta.rs  f16.rs  ffi.rs  lib.rs  metrics.rs  quantizer.rs  segment.rs  store.rs  tier_policy.rs  tiering.rs
crates/ruvector-verified/src/: lib.rs  proof_store.rs
crates/rvf/: Cargo.toml  README.md
crates/rvf/rvf-cli/: Cargo.toml
crates/rvf/rvf-ebpf/: Cargo.toml
crates/rvf/rvf-import/: Cargo.toml
crates/rvf/rvf-kernel/: Cargo.toml
crates/rvf/rvf-launch/: Cargo.toml
crates/rvlite/: Cargo.toml
docs/adr/: ADR-030-rvf-cognitive-container.md
docs/research/sublinear-time-solver/: 18-agi-sublinear-optimization.md
examples/dna/: README.md
examples/dna/benches/: dna_bench.rs
examples/dna/src/: alignment.rs  biomarker.rs  epigenomics.rs  kmer.rs  lib.rs  main.rs  pharma.rs  protein.rs  types.rs  variant.rs
examples/edge/: Cargo.toml  README.md
examples/edge-net/: README.md
examples/edge/src/: agent.rs  intelligence.rs  lib.rs  memory.rs
examples/exo-ai-2025/docs/: README.md
examples/exo-ai-2025/report/: COMPREHENSIVE_COMPARISON.md  IIT_ARCHITECTURE_ANALYSIS.md  (+2 more)
examples/rvf/: Cargo.toml
(+27 files in other folders)
