[workspace]

[package]
name = "ruvector-edge"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Edge AI swarm communication with ruv-swarm-transport and RuVector intelligence"
authors = ["RuVector Team"]
repository = "https://github.com/ruvnet/ruvector"

[features]
default = ["websocket", "shared-memory"]
websocket = ["ruv-swarm-transport/default"]
shared-memory = []
wasm = ["ruv-swarm-transport/wasm", "wasm-bindgen", "web-sys", "js-sys"]
full = ["websocket", "shared-memory"]

[dependencies]
# Swarm transport
ruv-swarm-transport = "1.0.5"

# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros", "time", "net", "signal"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Compression (for tensor sync)
lz4_flex = "0.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[bin]]
name = "edge-agent"
path = "src/bin/agent.rs"

[[bin]]
name = "edge-coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "edge-demo"
path = "src/bin/demo.rs"

[[example]]
name = "local_swarm"
path = "examples/local_swarm.rs"

[[example]]
name = "distributed_learning"
path = "examples/distributed_learning.rs"

[profile.release]
opt-level = 3
lto = "thin"
